--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes, cord</title>
+    <title>Yes, code</title>
 
     <!-- SEO -->
-    <meta name="description" content="YES Cord, 프론트엔드 김예슬입니다">
+    <meta name="description" content="YES, Code! 프론트엔드 김예슬입니다">
     <meta name="keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
     <meta property="og:title" content="김예슬" />
 	<meta name="og:description" property="og:description" content=""/>
 	<meta property="og:keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
 	<meta name="og:type" property="og:type" content="website" />
 	<meta name="og:url" property="og:url" content="http://louteos.dothome.co.kr/myinfo/" />
-	<meta name="og:image" property="og:image" content="img/text2.png" />
+	<meta name="og:image" property="og:image" content="/img/code_cat.jpg" />
     <script src="https://kit.fontawesome.com/666725dce4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
@@ -51,11 +51,11 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
     <!-- Navigation -->
-            <ul class="d1 d-none d-md-flex mb-0">
+            <ul class="d1 d-none d-md-flex mb-0 text-center">
                 <li><a href="">Intro</a></li>
                 <li><a href="">About me</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="">Form</a></li>
+                <li><a href="">Pre-Interview</a></li>
             </ul>
     </header>
 
@@ -88,10 +88,34 @@
             </section>
 
     <!-- Section 4 -->
-            <section id="form" class="slideSection">
+            <section id="preInterview" class="slideSection">
                 <h2>Section 4</h2>
+                <dl class="faq container px-0">
+                    <dt class="border-top text-center ">
+                      <h3>Q. 전공과 다른 직무로 오게 된 이유가 무엇인가요?</h3>
+                    </dt>
+                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
+                    <dt class="border-top text-center">
+                      <h3>Q. 수료하며 힘든 부분은 무엇이며, 그를 어떻게 해낼 수 있었나요?</h3>
+                    </dt>
+                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
+                    <dt class="border-top text-center">
+                      <h3>Q. 본인의 강점과 약점은 무엇인가요?</h3>
+                    </dt>
+                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
+                    <dt class="border-top text-center">
+                      <h3>Q. 목표가 무엇인가요? 5년 후 자신의 모습은 어떨 것 같나요?</h3>
+                    </dt>
+                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
+                    <dt class="border-top text-center">
+            </section>
+
+    <!-- Section 5 -->
+            <section id="design" class="slideSection">
+                <h2>Section 5</h2>
             </section>
         </div>
+    </section>
 
     <!-- Quick Menu -->
     <div id="qm" class="text-center">
