--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes, code</title>
+    <title>Yescord</title>
 
     <!-- SEO -->
     <meta name="description" content="YES, Code! 프론트엔드 김예슬입니다">
@@ -14,15 +14,15 @@
 	<meta property="og:keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
 	<meta name="og:type" property="og:type" content="website" />
 	<meta name="og:url" property="og:url" content="http://louteos.dothome.co.kr/myinfo/" />
-	<meta name="og:image" property="og:image" content="/img/code_cat.jpg" />
+	<meta name="og:image" property="og:image" content="img/logo_white.png" />
     <script src="https://kit.fontawesome.com/666725dce4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
     <!-- icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon_white.png" />
-    <link rel="apple-touch-icon" href="img/icon.png" />
-    <link rel="apple-touch-icon-precomposed" href="img/icon.png">
-    <meta name="msapplication-TileImage" content="img/icon.png" size="270x270" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/paw.png" />
+    <link rel="apple-touch-icon" href="img/paw.png" />
+    <link rel="apple-touch-icon-precomposed" href="img/paw.png">
+    <meta name="msapplication-TileImage" content="img/paw.png" size="270x270" />
     
     <!-- font -->
 
@@ -45,7 +45,7 @@
     <header id="nav" class="fixed-top d-flex justify-content-between align-items-center px-3 px-md-5">
     <!-- Logo -->
             <h1 class="col-4 col-sm-3 col-md-2">
-                <a href="#topPage" class="d-block"><img src="img/text1.svg" alt="" class="img-fluid"></a>
+                <a href="#topPage" class="d-block"><img src="/img/logo.svg" alt="" class="logo img-fluid"></a>
             </h1>
             <button id="allMenu" class="d-md-none">
                 <i class="fa-solid fa-bars"></i>
@@ -91,23 +91,23 @@
             <section id="preInterview" class="slideSection">
                 <h2>Section 4</h2>
                 <dl class="faq container px-0">
-                    <dt class="border-top text-center ">
+                    <dt class="text-center ">
                       <h3>Q. 전공과 다른 직무로 오게 된 이유가 무엇인가요?</h3>
                     </dt>
                     <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="border-top text-center">
+                    <dt class="text-center">
                       <h3>Q. 수료하며 힘든 부분은 무엇이며, 그를 어떻게 해낼 수 있었나요?</h3>
                     </dt>
                     <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="border-top text-center">
+                    <dt class="text-center">
                       <h3>Q. 본인의 강점과 약점은 무엇인가요?</h3>
                     </dt>
                     <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="border-top text-center">
+                    <dt class="text-center">
                       <h3>Q. 목표가 무엇인가요? 5년 후 자신의 모습은 어떨 것 같나요?</h3>
                     </dt>
                     <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="border-top text-center">
+                    <dt class="text-center">
             </section>
 
     <!-- Section 5 -->
