--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yescord</title>
+    <title>YESCORD</title>
 
     <!-- SEO -->
     <meta name="description" content="YES, Code! 프론트엔드 김예슬입니다">
     <meta name="keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
     <meta property="og:title" content="김예슬" />
-	<meta name="og:description" property="og:description" content=""/>
-	<meta property="og:keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
-	<meta name="og:type" property="og:type" content="website" />
-	<meta name="og:url" property="og:url" content="http://louteos.dothome.co.kr/myinfo/" />
-	<meta name="og:image" property="og:image" content="img/logo_white.png" />
+    <meta name="og:description" property="og:description" content=""/>
+    <meta property="og:keywords" content="김예슬 프론트엔드 개발 6개월과정 html css javascript react frontend developer">
+    <meta name="og:type" property="og:type" content="website" />
+    <meta name="og:url" property="og:url" content="http://louteos.dothome.co.kr/myinfo/" />
+    <meta name="og:image" property="og:image" content="img/logo_white.png" />
     <script src="https://kit.fontawesome.com/666725dce4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="dist/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <!-- plug in js -->
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
@@ -42,10 +42,10 @@
 
 </head>
 <body>
-    <header id="nav" class="fixed-top d-flex justify-content-between align-items-center px-3 px-md-5">
+    <header id="nav" class="fixed-top d-flex justify-content-between align-items-center py-3 px-3 px-md-5">
     <!-- Logo -->
-            <h1 class="col-4 col-sm-3 col-md-2">
-                <a href="#topPage" class="d-block"><img src="/img/logo.svg" alt="" class="logo img-fluid"></a>
+            <h1 class="col-4 col-sm-3 col-md-2 pb-0 m-0">
+                <a href="#topPage" class="d-block"><img src="img/lo_fill.png" alt="" class="logo img-fluid"></a>
             </h1>
             <button id="allMenu" class="d-md-none">
                 <i class="fa-solid fa-bars"></i>
@@ -61,67 +61,74 @@
 
     <section class="wrap">
         <div>
-    <!-- Section 1 -->
+            <!-- Section 1 -->
             <section id="intro" class="slideSection">
-                    <h2>Section 1</h2>
+              <h2 class="sr-only">Section 1</h2>
             </section>
             
-    <!-- Section 2 -->
-            <section id="about" class="slideSection">
-                <h2>Section 2</h2>
-            </section>
-
-    <!-- Section 3 -->
+            <!-- Section 2 -->
             <section id="portfolio" class="slideSection">
-                <h2>Section 3</h2>
+              <h2 class="text-center">Section 2</h2>
 
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide">Slide 1</div>
-                      <div class="swiper-slide">Slide 2</div>
-                      <div class="swiper-slide">Slide 3</div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+              <div class="swiper mySwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
                   </div>
-            </section>
+                  <div class="swiper-pagination"></div>
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
+                </div>
+          </section>
 
-    <!-- Section 4 -->
-            <section id="preInterview" class="slideSection">
-                <h2>Section 4</h2>
-                <dl class="faq container px-0">
-                    <dt class="text-center ">
-                      <h3>Q. 전공과 다른 직무로 오게 된 이유가 무엇인가요?</h3>
-                    </dt>
-                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="text-center">
-                      <h3>Q. 수료하며 힘든 부분은 무엇이며, 그를 어떻게 해낼 수 있었나요?</h3>
-                    </dt>
-                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="text-center">
-                      <h3>Q. 본인의 강점과 약점은 무엇인가요?</h3>
-                    </dt>
-                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="text-center">
-                      <h3>Q. 목표가 무엇인가요? 5년 후 자신의 모습은 어떨 것 같나요?</h3>
-                    </dt>
-                    <dd class="bg-light py-3 mb-0">내용<br>내용<br>내용<br></dd>
-                    <dt class="text-center">
-            </section>
+            <!-- Section 3 -->
+            <section id="preInterview" class="slideSection container">
+              <h2 class="d-flex justify-content-center align-items-center pb-3">Section 3
+                <button id="btn">▼</button>
+              </h2>
 
-    <!-- Section 5 -->
-            <section id="design" class="slideSection">
-                <h2>Section 5</h2>
-            </section>
-        </div>
-    </section>
+              <dl class="faq container px-0">
+                  <dt class="text-left">
+                    <h5>Q. 전공과 다른 직무로 오게 된 이유가 무엇인가요?</h5>
+                  </dt>
+                  <dd class="bg-light">내용<br>내용<br>내용<br></dd>
+                  <dt class="text-left">
+                    <h5>Q. 수료과정에서 힘든 부분은 무엇이었으며, 그를 어떻게 해낼 수 있었나요?</h5>
+                  </dt>
+                  <dd class="bg-light">내용<br>내용<br>내용<br></dd>
+                  <dt class="text-left">
+                    <h5>Q. 본인의 강점과 약점은 무엇인가요?</h5>
+                  </dt>
+                  <dd class="bg-light">내용<br>내용<br>내용<br></dd>
+                  <dt class="text-left">
+                    <h5>Q. 목표가 무엇인가요? 5년 후 자신의 모습은 어떨 것 같나요?</h5>
+                  </dt>
+                  <dd class="bg-light">내용<br>내용<br>내용<br></dd>
+                  <dt class="text-left">
+          </section>
+
+              <!-- Section 4 -->
+              <section id="design" class="slideSection">
+                <h2 class="text-center">Section 4</h2>
+                <pre>
+                colors
+                #181818
+                #8758ff
+                #5cbbe4
+                #f2f2f2
+                </pre>
+              </section>
+            </div>
+          </section>
+            
 
     <!-- Quick Menu -->
     <div id="qm" class="text-center">
-        <a href="#"><i class="fa-regular fa-note-sticky"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="xi-kakaotalk"></i></a>
+        <a href="#"><i class="fa-regular fa-note-sticky" title="Notion 바로가기"></i></a>
+        <a href="#"><i class="fa-brands fa-github" title="Github 바로가기"></i></a>
+        <a href="#"><i class="xi-kakaotalk" title="카카오톡 문의"></i></a>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -133,7 +140,7 @@
       var swiper = new Swiper(".mySwiper", {
         loop: true,
         slidesPerView: 1,
-        spaceBetween: 30,
+        spaceBetween: 0,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
